fix mobile reponsiveness issue and apply dark mode features in other pages

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -150,11 +150,12 @@ $primary-color: #638eff;
     position: absolute;
   }
 }
-.container {
-  width: 900px;
-  margin: 0 auto;
-  margin-top: 50px;
-}
+
+// .container {
+//   width: 900px;
+//   margin: 0 auto;
+//   margin-top: 50px;
+// }
 
 .header-bar {
   display: flex;
